--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,5 @@ before_script:
     - pip install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
     
 run_tests:
-    - pytest -vvs
+    script:
+        - pytest -vvs
