--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 before_script:
+    - apt-get update 
+    - apt-get install -y python3-pip
     - export CTAPIPE_VERSION=master
     - pip install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
     - pip install -e .
