--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ before_script:
     - apt-get update -qq
     - apt-get install -y -qq python3-pip
     - export CTAPIPE_VERSION=master
-    - pip install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
-    - pip install -e .
+    - pip3 install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
+    - pip3 install -e .
     
 run_tests:
     script:
