--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ before_script:
 
     #- apt-get install -y -qq python3-pip
     - export CTAPIPE_VERSION=master
-    - pip3 install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
+    - pip3 install http://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
     - pip3 install -e .
     
 run_tests:
