--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ before_script:
     
     - echo "deb http://ftp.de.debian.org/debian testing main" >> /etc/apt/sources.list
     - echo 'APT::Default-Release "stable";' | tee -a /etc/apt/apt.conf.d/00local
-    - cat etc/apt/sources.list
+    - cat /etc/apt/sources.list
     
     # - apt-get update -qq
     # - apt-get -t testing install python3.7
