--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ before_script:
     - echo 'APT::Default-Release "stable";' | tee -a /etc/apt/apt.conf.d/00local
     - cat /etc/apt/sources.list
     
-    # - apt-get update -qq
-    # - apt-get -t testing install python3.7
+    - apt-get update -qq
+    - apt-get -t testing install python3.7
 
     # #- apt-get install -y -qq python3-pip
     # - export CTAPIPE_VERSION=master
