--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,10 @@ before_script:
     - DEBIAN_FRONTEND=noninteractive apt-get -t testing install -y python3.6
 
     # #- apt-get install -y -qq python3-pip
-    # - export CTAPIPE_VERSION=master
-    # - pip3 install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
-    # - pip3 install https://github.com/cta-observatory/ctapipe-extra/archive/$CTAPIPE_VERSION.tar.gz
-    # - pip3 install -e .
+    - export CTAPIPE_VERSION=master
+    - pip3 install https://github.com/cta-observatory/ctapipe/archive/$CTAPIPE_VERSION.tar.gz
+    - pip3 install https://github.com/cta-observatory/ctapipe-extra/archive/$CTAPIPE_VERSION.tar.gz
+    - pip3 install -e .
     
 run_tests:
     script:
