Update repository URL.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = ctapipe_io_magic
-description = ctapipe plugin for reading of the calibrated MAGIC files
+description = ctapipe plugin for reading calibrated MAGIC files
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Ievgen Vovk et al.
 author_email = Ievgen.Vovk@mpp.mpg.de
 license = MIT
-url = https://gitlab.mpcdf.mpg.de/ievo/ctapipe_io_magic
+url = https://github.com/cta-observatory/ctapipe_io_magic
