--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
-/.project
-/build/
-/.project
-/.pydevproject
-/ctapipe_io_magic.egg-info/
-ctapipe_io_magic.egg-info/PKG-INFO
-ctapipe_io_magic.egg-info/dependency_links.txt
-ctapipe_io_magic.egg-info/requires.txt
-ctapipe_io_magic.egg-info/SOURCES.txt
-ctapipe_io_magic.egg-info/top_level.txt
-dist/
-ctapipe_io_magic/__pycache__/__init__.cpython-36.pyc
-*__pycache__
 test_data
+.pytest_cache
+
+# Compiled files
+*.py[co]
+*.a
+*.o
+*.so
+__pycache__
+
+# Eclipse editor project files
+.project
+.pydevproject
+
+# Other
+.*.swp
+*~
+\#*
+.\#*
+
+# Packages/installer info
+*.egg
+*.eggs
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+distribute-*.tar.gz
+
+# Other generated files
+htmlcov
+.coverage
