--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ test_data
 *.so
 __pycache__
 
+# ignore version cache file (generated automatically when setup.py is run)
+ctapipe_io_lst/_version.py
+ctapipe_io_lst/_version_cache.py
+
 # Eclipse editor project files
 .project
 .pydevproject
