Add flake8 config.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,15 @@ author = Ievgen Vovk et al.
 author_email = Ievgen.Vovk@mpp.mpg.de
 license = MIT
 url = https://github.com/cta-observatory/ctapipe_io_magic
+
+[flake8]
+exclude=
+  build,
+  docs,
+  .eggs
+max-line-length=90
+#ignore=W291,E303,W391,F403,F401,W503,W1202
+select = C,E,F,W,B,B950
+ignore = E501,W503,E203,W201
+per-file-ignores =
+    */__init__.py: F401, F403
