--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,33 +12,39 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]
-        ctapipe-version: [v0.17.0]
+        python-version: ["3.8", "3.9", "3.10"]
+        ctapipe-version: ["v0.17.0",]
+
+    defaults:
+      run:
+        shell: bash -exl {0}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
+      - name: Set python version
         env:
-          PYTHON_VERSION: ${{ matrix.python-version }}
-          CTAPIPE_VERSION: ${{ matrix.ctapipe-version }}
-
+          python-version: ${{ matrix.python-version }}
         run: |
-          . $CONDA/etc/profile.d/conda.sh
-          conda config --set always_yes yes --set changeps1 no
           sed -i -e "s/- python=.*/- python=$PYTHON_VERSION/g" environment.yml
-          conda env create -n ci -f environment.yml
-          conda activate ci
+
+      - name: Create and activate env
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          mamba-version: "*"
+          use-mamba: true
+          activate-environment: ci
+          environment-file: environment.yml
+
+      - name: install
+        env:
+          CTAPIPE_VERSION: ${{ matrix.ctapipe-version }}
+        run: |
+          pip install -e .
           # we install ctapipe using pip to be able to select any commit, e.g. the current master
           pip install pytest-cov "git+https://github.com/cta-observatory/ctapipe@$CTAPIPE_VERSION"
-          pip install -e .
           git describe --tags
 
       - name: Download test data
@@ -53,9 +59,6 @@ jobs:
         run: |
           # github actions starts a new shell for each "step", so we need to
           # activate our env again
-          source $CONDA/etc/profile.d/conda.sh
-          conda activate ci
-          coverage run -m pytest -v
-          coverage xml
+          pytest --cov=ctapipe_io_magic --cov-report=xml
 
       - uses: codecov/codecov-action@v1
