--- a/example_stage1_config.json
+++ b/example_stage1_config.json
@@ -6,8 +6,7 @@
     "overwrite": true,
     "write_images": true,
     "write_parameters": true,
-    "write_stereo_shower": false,
-    "write_mono_shower": false,
+    "write_showers": false,
     "transform_image": true,
     "transform_peak_time": true
   },
@@ -24,17 +23,17 @@
     },
     "ImageQualityQuery": {
       "quality_criteria": [
-        ["enough_pixels", "lambda im: np.count_nonzero(im) > 2"],
-        ["enough_charge", "lambda im: im.sum() > 50"]
+        ["enough_pixels", "np.count_nonzero(image) > 2"],
+        ["enough_charge", "image.sum() > 50"]
       ]
     }
   },
   "ShowerProcessor": {
     "ShowerQualityQuery": {
         "quality_criteria": [
-          ["enough intensity", "lambda p: p.hillas.intensity > 50"],
-          ["Positive width", "lambda p: p.hillas.width.value > 0"],
-          ["enough pixels", "lambda p: p.morphology.num_pixels > 3"]
+          ["enough intensity", "parameters.hillas.intensity > 50"],
+          ["Positive width", "parameters.hillas.width.value > 0"],
+          ["enough pixels", "parameters.morphology.num_pixels > 3"]
         ]
     }
   }
