--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
         run: |
           # github actions starts a new shell for each "step", so we need to
           # activate our env again
+          python eventsource_subclasses.py | grep MAGICEventSource
           pytest --cov=ctapipe_io_magic --cov-report=xml
 
       - uses: codecov/codecov-action@v1
