--- a/setup.cfg
+++ b/setup.cfg
@@ -28,8 +28,8 @@ python_requires = >=3.8
 zip_safe = False
 install_requires=
     astropy~=5.0
-    ctapipe>=0.17.0,<=0.19
-    numpy>=1.20
+    ctapipe~=0.19.0
+    numpy>=1.22
     uproot~=5.0
 
 [options.package_data]
