--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        ctapipe-version: ["v0.19.0",]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        ctapipe-version: ["v0.19.2",]
 
     defaults:
       run:
