Update setup config file with BSD license and python 3.11.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 author = Ievgen Vovk et al.
 author_email = Ievgen.Vovk@mpp.mpg.de
-license = MIT
+license = BSD
 
 project_urls =
     Bug Tracker = https://github.com/cta-observatory/ctapipe_io_magic/issues
@@ -13,7 +13,7 @@ project_urls =
 
 classifiers =
     Development Status :: 4 - Beta
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: BSD License
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Astronomy
     Topic :: Scientific/Engineering :: Physics
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 packages = find:
