--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 author = Ievgen Vovk et al.
 author_email = Ievgen.Vovk@mpp.mpg.de
-license = BSD
+license = BSD 3-Clause
 
 project_urls =
     Bug Tracker = https://github.com/cta-observatory/ctapipe_io_magic/issues
