--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires=
     ctapipe~=0.19.0
     numpy>=1.22
     uproot~=5.0
-    scipy~=1.2
+    scipy<1.14
 
 [options.package_data]
 * = resources/*
