--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,7 @@ jobs:
           pytest --cov=ctapipe_io_magic --cov-report=xml
 
       - uses: codecov/codecov-action@v4
+        if: contains(github.event.pull_request.labels.*.name, 'documentation-only') == false
+        with:
+            fail_ci_if_error: true
+            token: ${{ secrets.CODECOV_TOKEN }}
