--- a/example_stage1_config.json
+++ b/example_stage1_config.json
@@ -4,9 +4,9 @@
   },
   "DataWriter": {
     "overwrite": true,
-    "write_images": true,
-    "write_parameters": true,
-    "write_showers": false,
+    "write_dl1_images": true,
+    "write_dl1_parameters": true,
+    "write_dl2": false,
     "transform_image": true,
     "transform_peak_time": true
   },
