--- a/setup.cfg
+++ b/setup.cfg
@@ -28,11 +28,11 @@ packages = find:
 python_requires = >=3.8
 zip_safe = False
 install_requires=
-    astropy~=5.0
-    ctapipe~=0.19.0
+    astropy
+    ctapipe~=0.25.0
     numpy>=1.22
-    uproot~=5.0
-    scipy<1.14
+    uproot
+    scipy
 
 [options.package_data]
 * = resources/*
