--- a/setup.cfg
+++ b/setup.cfg
@@ -18,21 +18,20 @@ classifiers =
     Topic :: Scientific/Engineering :: Astronomy
     Topic :: Scientific/Engineering :: Physics
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.10
 zip_safe = False
 install_requires=
-    astropy~=5.0
-    ctapipe~=0.19.0
+    astropy
+    ctapipe>=0.25.0
     numpy>=1.22
-    uproot~=5.0
-    scipy<1.14
+    uproot
+    scipy
 
 [options.package_data]
 * = resources/*
